--- a/template/en/default/search/search-help.html.tmpl
+++ b/template/en/default/search/search-help.html.tmpl
@@ -63,9 +63,9 @@
 { id => "keywords_type", 
   html => "The type of keyword search you would like" },   
 { id => "bug_status", 
-  html => "A $terms.bug may be in any of a number of states." },   
+  html => "$terms.Abug may be in any of a number of states." },
 { id => "resolution", 
-  html => "If a $terms.bug is in a resolved state, then one of these reasons 
+  html => "If $terms.abug is in a resolved state, then one of these reasons
            will<br>be given for its resolution." },   
 { id => "bug_severity", 
   html => "How severe the $terms.bug is, or whether it's an enhancement." },   
