--- a/template/en/default/list/table.html.tmpl
+++ b/template/en/default/list/table.html.tmpl
@@ -160,7 +160,7 @@
     [% tableheader %]
   [% END %]
 
-  <tr class="clickable_area bz_bugitem
+  <tr class="bz_bugitem
              bz_[% bug.bug_severity FILTER css_class_quote -%]
              bz_[% bug.priority FILTER css_class_quote -%]
              bz_[% bug.bug_status FILTER css_class_quote -%]
@@ -168,9 +168,7 @@
              [%+ "bz_secure" IF bug.secure_mode -%]
              [%+ "bz_secure_mode_$bug.secure_mode" FILTER css_class_quote IF bug.secure_mode -%]
              [%+ count % 2 == 1 ? "bz_row_odd" : "bz_row_even" -%]
-             "
-      onClick="document.location='show_bug.cgi?id=[% bug.bug_id %]'">
-             
+             ">
 
     [% IF dotweak %]
     <td>
