--- a/template/en/default/account/cancel-token.txt.tmpl
+++ b/template/en/default/account/cancel-token.txt.tmpl
@@ -22,9 +22,10 @@
 
 [% PROCESS global/variables.none.tmpl %]
 
-From: bugzilla-admin-daemon
+From: [% Param('mailfrom') %]
 To: [% emailaddress %]
 Subject: [% PROCESS subject %]
+X-Bugzilla-Type: admin
 
 A request was cancelled from [% remoteaddress %].
 
