--- a/template/en/default/bug/edit.html.tmpl
+++ b/template/en/default/bug/edit.html.tmpl
@@ -147,7 +147,7 @@
               [% IF Param('useclassification') && bug.classification_id != 1 %]
                 <b>[[% bug.classification FILTER html %]]</b>
               [% END %]
-              <b>[% terms.Bug %]#:</b>
+              <b>[% terms.Bug %]#</b>:
             </td>
             <td>
               <a href="[% Param('urlbase') %]show_bug.cgi?id=[% bug.bug_id %]">
@@ -182,18 +182,14 @@
 
           <tr>
             <td align="right">
-              <b>
-                <a href="page.cgi?id=fields.html#status">Status</a>:
-              </b>
+              <b><a href="page.cgi?id=fields.html#status">Status</a></b>:
             </td>
             <td>[% status_descs.${bug.bug_status} FILTER html %]</td>
           </tr>
 
           <tr>
             <td align="right">
-              <b>
-                <a href="page.cgi?id=fields.html#resolution">Resolution</a>:
-              </b>
+              <b><a href="page.cgi?id=fields.html#resolution">Resolution</a></b>:
             </td>
             <td>
               [% get_resolution(bug.resolution) FILTER html %]
@@ -203,20 +199,9 @@
             </td>
           </tr>
 
-          <tr>
-            <td align="right">
-              <b>
-                <a href="page.cgi?id=fields.html#assigned_to">Assigned&nbsp;To</a>:
-              </b>
-            </td>
-            <td>[% bug.assigned_to.identity FILTER html %]</td>
-          </tr>
-
         </table>
-
       </td>
       <td valign="top">
-
         <table cellspacing="1" cellpadding="1">
 
           <tr>
@@ -272,18 +257,58 @@
       </td>
 
       <td valign="top">
-
         <table cellpadding="1" cellspacing="1">
 
           <tr>
             <td align="right">
-              <b>Reporter:</b>
+              <b>Reporter</b>:
             </td>
             <td>
               <a href="mailto:[% bug.reporter.email FILTER html %]">
                 [% bug.reporter.identity FILTER html %]</a>
             </td>
           </tr>
+
+          <tr>
+            <td align="right">
+              <b><a href="page.cgi?id=fields.html#assigned_to">Assigned&nbsp;To</a></b>:
+            </td>
+            <td>
+              <a href="mailto:[% bug.assigned_to.email FILTER html %]">
+                 [% bug.assigned_to.identity FILTER html %]</a>
+            </td>
+          </tr>
+
+          [% IF Param('useqacontact') %]
+          <tr>
+            <td align="right">
+              <label for="qa_contact" accesskey="q"><b><u>Q</u>A Contact</b></label>:
+            </td>
+            <td colspan="7">
+              [% IF bug.check_can_change_field("qa_contact", 0, 1) || !user.id %]
+                [% INCLUDE global/userselect.html.tmpl
+                    id => "qa_contact"
+                    name => "qa_contact"
+                    value => bug.qa_contact.login
+                    size => 30
+                    emptyok => 1
+                %]
+              [% ELSE %]
+                <input type="hidden" name="qa_contact"
+                       value="[% bug.qa_contact.login FILTER html %]">
+                <a href="mailto:[% bug.qa_contact.email FILTER html %]">
+                  [% IF bug.qa_contact.login && bug.qa_contact.login.length > 30 %]
+                    <span title="[% bug.qa_contact.login FILTER html %]">
+                      [% bug.qa_contact.identity FILTER truncate(30) FILTER html %]
+                    </span>
+                  [% ELSE %]
+                    [% bug.qa_contact.identity FILTER html %]
+                  [% END %]
+                </a>
+              [% END %]
+            </td>
+          </tr>
+          [% END %]
 
           <tr>
             <td align="right" valign="top">
@@ -322,7 +347,6 @@
           </tr>
 
         </table>
-
       </td>
       </tr>
 
@@ -330,36 +354,15 @@
         <td colspan="2">
           <table cellspacing="1" cellpadding="1">
 
-      [%# *** QAContact URL Requests Summary Whiteboard Keywords *** %]
+          [%# *** URL Requests Summary Whiteboard Keywords *** %]
 
-         [% IF Param('useqacontact') %]
-           <tr>
-             <td align="right">
-             <label for="qa_contact" accesskey="q"><b><u>Q</u>A Contact</b></label>:
-             </td>
-             <td colspan="7">
-               [% IF bug.check_can_change_field("qa_contact", 0, 1) || !user.id %]
-                 [% INCLUDE global/userselect.html.tmpl
-                    id => "qa_contact"
-                    name => "qa_contact"
-                    value => bug.qa_contact.login
-                    size => 60
-                    emptyok => 1
-                  %]
-               [% ELSE %]
-                 <input type="hidden" name="qa_contact"
-                        value="[% bug.qa_contact.login FILTER html %]">
-                 [% IF bug.qa_contact.login && bug.qa_contact.login.length > 60 %]
-                   <span title="[% bug.qa_contact.login FILTER html %]">
-                     [% bug.qa_contact.login FILTER truncate(60) FILTER html %]
-                   </span>
-                 [% ELSE %]
-                   [% bug.qa_contact.login FILTER html %]
-                 [% END %]
-               [% END %]
-             </td>
-           </tr>
-         [% END %]
+          <tr>
+            <td align="right">
+              <label for="short_desc" accesskey="s"><b><u>S</u>ummary</b></label>:
+            </td>
+            [% PROCESS input inputname => "short_desc" size => "60" colspan => 2
+                             maxlength => 255 %]
+          </tr>
 
           <tr>
             <td align="right">
@@ -372,25 +375,16 @@
                 [% END %]
               [%%]</b></label>:
             </td>
-            [% PROCESS input inputname => "bug_file_loc" size => "60" colspan => 5 %]
-          </tr>
-
-          <tr>
-            <td align="right">
-              <label for="short_desc" accesskey="s"><b><u>S</u>ummary</b></label>:
-            </td>
-            [% PROCESS input inputname => "short_desc" size => "60" colspan => 5
-                             maxlength => 255 %]
+            [% PROCESS input inputname => "bug_file_loc" size => "60" colspan => 2 %]
           </tr>
 
           [% IF Param('usestatuswhiteboard') %]
             <tr>
               <td align="right">
-                <label for="status_whiteboard" accesskey="w"><b>Status
-                <u>W</u>hiteboard</b></label>:
+                <label for="status_whiteboard" accesskey="w"><b><u>W</u>hiteboard</b></label>:
               </td>
               [% PROCESS input inputname => "status_whiteboard" size => "60" 
-                               colspan => 5 %]
+                               colspan => 2 %]
             </tr>
           [% END %]
 
@@ -398,7 +392,7 @@
             <tr>
               <td align="right">
                 <label for="keywords" accesskey="k"><b><a href="describekeywords.cgi"><u>K</u>eywords</a></b></label>:
-              [% PROCESS input inputname => "keywords" size => 60 colspan => 5
+              [% PROCESS input inputname => "keywords" size => 60 colspan => 2
                                value => bug.keywords.join(', ') %]
             </tr>
           [% END %]
@@ -411,11 +405,35 @@
             [% FOREACH field = fields %]
               <tr>
                 [% PROCESS bug/field.html.tmpl value=bug.${field.name}
-                                               editable=1 %]
+                                               editable = 1
+                                               value_span = 2 %]
               </tr>
             [% END %]
           [% END %]
 
+          <tr>
+            [% PROCESS dependencies
+               dep = { title => "Depends on", fieldname => "dependson" } %]
+          </tr>
+
+          <tr>
+            [% PROCESS dependencies accesskey = "b"
+               dep = { title => "<u>B</u>locks", fieldname => "blocked" } %]
+          </tr>
+
+          <tr>
+            <th>&nbsp;</th>
+
+            <td colspan="2">
+              <a href="showdependencytree.cgi?id=[% bug.bug_id %]&amp;hide_resolved=1">Show
+                 dependency tree</a>
+
+              [% IF Param('webdotbase') %]
+                - <a href="showdependencygraph.cgi?id=[% bug.bug_id %]">Show
+                     dependency graph</a>
+              [% END %]
+            </td>
+          </tr>
         </table>
       </td>
 
@@ -516,82 +534,74 @@
              show_attachment_flags = bug.show_attachment_flags
    %]
 
-[%# *** Dependencies Votes *** %]
-
-  <table>
-    <tr>
-    [% PROCESS dependencies
-       dep = { title => "depends on", fieldname => "dependson" } %]
-      <td rowspan="2">
-        <a href="showdependencytree.cgi?id=[% bug.bug_id %]&amp;hide_resolved=1">Show
-        dependency tree</a>
-
-        [% IF Param('webdotbase') %]
-          <br>
-          <a href="showdependencygraph.cgi?id=[% bug.bug_id %]">Show
-          dependency graph</a>
-        [% END %]
-      </td>
-    </tr>
-
-    <tr>
-    [% PROCESS dependencies accesskey = "b"
-       dep = { title => "<u>b</u>locks", fieldname => "blocked" } %]
-    </tr>
-  </table>
-
-  [% IF bug.use_votes %]
-  <table>
-    <tr>
-      <th>
-        <a href="page.cgi?id=voting.html">Votes</a>:
-      </th>
-      <td>
-        [% bug.votes %]&nbsp;&nbsp;&nbsp;
-        <a href="votes.cgi?action=show_bug&amp;bug_id=[% bug.bug_id %]">Show
-        votes for this [% terms.bug %]</a>&nbsp;&nbsp;&nbsp;
-        <a href="votes.cgi?action=show_user&amp;bug_id=[% bug.bug_id %]#vote_[% bug.bug_id %]">Vote
-        for this [% terms.bug %]</a>
-      </td>
-    </tr>
-  </table>
-  [% END %]
 
 [%# *** Comments Groups *** %]
 
   <br>
-  <label for="comment" accesskey="c"><b>Additional <u>C</u>omments</b></label>:
-  [% IF Param("insidergroup") && user.in_group(Param("insidergroup")) %]
-    <input type="checkbox" name="commentprivacy" value="1"
-           id="newcommentprivacy"
-           onClick="updateCommentTagControl(this, form)">
-    <label for="newcommentprivacy">Private</label>
-  [% END %]
-  <br>
-  <a name="add_comment"></a>
-  [% INCLUDE global/textarea.html.tmpl
-    name      = 'comment'
-    id        = 'comment'
-    minrows   = 10
-    maxrows   = 25
-    cols      = constants.COMMENT_COLS
-  %]
+  <table cellpadding="1" cellspacing="1">
+    <tr>
+      <td>
+        <label for="comment" accesskey="c"><b>Additional <u>C</u>omments</b></label>:
+        [% IF Param("insidergroup") && user.in_group(Param("insidergroup")) %]
+          <input type="checkbox" name="commentprivacy" value="1"
+                 id="newcommentprivacy"
+                 onClick="updateCommentTagControl(this, form)">
+          <label for="newcommentprivacy">Private</label>
+        [% END %]
+        <br>
+        <a name="add_comment"></a>
+        [% INCLUDE global/textarea.html.tmpl
+                   name      = 'comment'
+                   id        = 'comment'
+                   minrows   = 10
+                   maxrows   = 25
+                   cols      = constants.COMMENT_COLS
+        %]
 
-  [% IF NOT bug.cc || NOT bug.cc.contains(user.login) %]
-    [% has_role = bug.user.isreporter
-                  || bug.assigned_to.id == user.id
-                  || (Param('useqacontact')
-                      && bug.qa_contact
-                      && bug.qa_contact.id == user.id) %]
+        [% IF NOT bug.cc || NOT bug.cc.contains(user.login) %]
+          [% has_role = bug.user.isreporter
+                        || bug.assigned_to.id == user.id
+                        || (Param('useqacontact')
+                            && bug.qa_contact
+                            && bug.qa_contact.id == user.id) %]
 
-    <br>
-    <input type="checkbox" id="addselfcc" name="addselfcc"
-      [% " checked=\"checked\""
-           IF user.settings.state_addselfcc.value == 'always'
-              || (!has_role
-                  && user.settings.state_addselfcc.value == 'cc_unless_role') %]>
-    <label for="addselfcc">Add [% user.identity FILTER html %] to CC list</label>
-  [% END %]
+          <br>
+          <input type="checkbox" id="addselfcc" name="addselfcc"
+            [% " checked=\"checked\""
+                 IF user.settings.state_addselfcc.value == 'always'
+                    || (!has_role
+                        && user.settings.state_addselfcc.value == 'cc_unless_role') %]>
+          <label for="addselfcc">Add [% user.identity FILTER html %] to CC list</label>
+        [% END %]
+      </td>
+
+      <td valign="top">
+        <fieldset>
+          <legend>Related actions</legend>
+          <ul>
+            <li><a href="show_activity.cgi?id=[% bug.bug_id %]">View [% terms.Bug %] Activity</a></li>
+            <li><a href="show_bug.cgi?format=multiple&amp;id=[% bug.bug_id %]">Format For Printing</a></li>
+            <li><a href="show_bug.cgi?ctype=xml&amp;id=[% bug.bug_id %]">XML</a></li>
+            <li><a href="enter_bug.cgi?cloned_bug_id=[% bug.bug_id %]">Clone This [% terms.Bug %]</a></li>
+          </ul>
+
+          [% IF bug.use_votes %]
+            <br>
+            <b><a href="page.cgi?id=voting.html">Votes</a></b>: [% bug.votes %]
+            <ul>
+              <li><a href="votes.cgi?action=show_bug&amp;bug_id=[% bug.bug_id %]">Show
+                           votes for this [% terms.bug %]</a></li>
+              <li><a href="votes.cgi?action=show_user&amp;bug_id=[% bug.bug_id %]#vote_[% bug.bug_id %]">Vote
+                           for this [% terms.bug %]</a></li>
+            </ul>
+          [% END %]
+
+          [%# Links to more things users can do with this bug. %]
+          [% Hook.process("links") %]
+        </fieldset>
+      </td>
+    </tr>
+  </table>
   <br>
 
   [% IF bug.groups.size > 0 %]
@@ -681,7 +691,7 @@
 [% BLOCK dependencies %]
   <th align="right">
     <label for="[% dep.fieldname %]"[% " accesskey=\"$accesskey\"" IF accesskey %]>
-    [% terms.Bug %] [%+ bug.bug_id %] [%+ dep.title %]</label>:
+    [% dep.title %]</label>:
   </th>
   <td>
   [% FOREACH depbug = bug.${dep.fieldname} %]
@@ -726,7 +736,7 @@
 [%############################################################################%]
 
 [% BLOCK input %]
-  <td[% " colspan=\"$colspan\"" IF $colspan %]>
+  <td[% " colspan=\"$colspan\"" IF colspan %]>
     [% val = value ? value : bug.$inputname %]
     [% IF bug.check_can_change_field(inputname, 0, 1) || !user.id %]
        <input id="[% inputname %]" name="[% inputname %]"
