--- a/template/en/default/global/useful-links.html.tmpl
+++ b/template/en/default/global/useful-links.html.tmpl
@@ -52,7 +52,7 @@
         [% ' <li><span class="separator">| </span><a href="editfields.cgi">Custom Fields</a></li>'
                                                IF user.groups.admin %]
         [% ' <li><span class="separator">| </span><a href="editvalues.cgi">Field Values</a></li>'
-                                               IF user.groups.editcomponents %]
+                                               IF user.groups.admin %]
         [% ' <li><span class="separator">| </span><a href="editgroups.cgi">Groups</a></li>'
                                                  IF user.groups.creategroups %]
         [% ' <li><span class="separator">| </span><a href="editkeywords.cgi">Keywords</a></li>'
